[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "h3xrecon_worker"
dynamic = ["version"]
description = "Worker component for h3xrecon bug bounty reconnaissance automation"
authors = [
    { name = "h3xitsec", email = "connect@h3x.it" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asyncpg==0.30.0",
    "loguru==0.7.2",
    "nats-py==2.9.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "redis==5.2.0",
    "six==1.16.0",
    "h3xrecon_core @ git+https://github.com/h3xitsec/h3xrecon-core.git@v___COREVERSION___",
    "h3xrecon_plugins @ git+https://github.com/h3xitsec/h3xrecon-plugins.git@v___PLUGINVERSION___"
]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.custom]
path = "./src/h3xrecon_worker/_build.py"
function = "VersionReplacementHook"

[tool.hatch.version]
path = "src/h3xrecon_worker/__about__.py"

[project.scripts]
h3xrecon-worker = "h3xrecon_worker.main:run"

[tool.hatch.build]
packages = ["src/h3xrecon_worker"]